test/visibility/private/lydia/outsideModule.good
outsideModule.chpl:4: error: Cannot access module 'M2'
